# thesis-attachments

./: README.md
ba-manual-mcp-server/: README.md  pyproject.toml
ba-manual-mcp-server/src/: main.py  rate_limiter.py  sanitize_output.py  server.py
ba-manual-mcp-server/src/discord_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
ba-manual-mcp-server/src/discord_client/api/: __init__.py  default_api.py
ba-manual-mcp-server/src/eve_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
ba-manual-mcp-server/src/github_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
ba-manual-mcp-server/src/invman_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
ba-manual-mcp-server/src/stage1a/: discord_tools.py  eve_tools.py  github_tools.py  invman_tools.py
ba-manual-mcp-server/src/stage1b/: discord_tools.py  eve_tools.py  github_tools.py  invman_tools.py
ba-manual-mcp-server/src/stage2/: discord_tools.py  eve_tools.py  github_tools.py
ba-manual-mcp-server/src/stage3/: discord_tools.py  eve_tools.py  github_tools.py  invman_tools.py
ba-manual-mcp-server/src/stage4a/: discord_tools.py  eve_tools.py  github_tools.py  invman_tools.py
ba-manual-mcp-server/src/stage4b/: discord_tools.py  eve_tools.py  github_tools.py  invman_tools.py
ba-manual-mcp-server/src/stage5/: discord_tools.py  eve_tools.py  github_tools.py  invman_tools.py
ba-manual-mcp-server/src/stage6/: discord_tools.py  eve_tools.py  github_tools.py  invman_tools.py
(+1934 files in other folders)
